[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name="fastnumbers"
authors = [
    {name = "Seth M. Morton", email = "drtuba78@gmail.com"},
]
dynamic = ["version"]
requires-python = ">=3.7"
description = "Super-fast and clean conversions to numbers."
readme = "README.rst"
license = {text = "MIT"}
keywords = ["conversion", "numeric", "performance"]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Science/Research",
	"Intended Audience :: Developers",
	"Intended Audience :: Information Technology",
	"Intended Audience :: System Administrators",
	"Intended Audience :: Financial and Insurance Industry",
	"Operating System :: OS Independent",
	"License :: OSI Approved :: MIT License",
	"Natural Language :: English",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Topic :: Scientific/Engineering :: Information Analysis",
	"Topic :: Utilities",
	"Topic :: Text Processing",
	"Topic :: Text Processing :: Filters",
]

[project.optional-dependencies]
fast = ["fastnumbers >= 2.0.0"]
icu = ["PyICU >= 1.0.0"]

[project.urls]
Homepage = "https://github.com/SethMMorton/fastnumbers"
Documentation = "https://fastnumbers.readthedocs.io/"
Issues = "https://github.com/SethMMorton/fastnumbers/issues"
Changelog = "https://github.com/SethMMorton/fastnumbers/blob/main/CHANGELOG.md"

[tool.setuptools_scm]
version_file = "src/fastnumbers/_version.py"

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"

[tool.pytest.ini_options]
addopts = "--tb=short"
