[bumpversion]
current_version = 2.0.5
commit = True
tag = True
tag_name = {new_version}

[metadata]
author = Seth M. Morton
author_email = drtuba78@gmail.com
url = https://github.com/SethMMorton/fastnumbers
description = Super-fast and clean conversions to numbers.
long_description = file: README.rst
license = MIT
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Science/Research
	Intended Audience :: Developers
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	Intended Audience :: Financial and Insurance Industry
	Operating System :: OS Independent
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Topic :: Scientific/Engineering :: Information Analysis
	Topic :: Utilities
	Topic :: Text Processing
	Topic :: Text Processing :: Filters

[bumpversion:file:setup.py]

[bumpversion:file:include/version.h]

[bumpversion:file:docs/source/conf.py]

[bumpversion:file:docs/source/changelog.rst]
search = X.X.X
replace = {new_version}

